--- a/server/package.json
+++ b/server/package.json
@@ -22,6 +22,7 @@
     "passport-jwt": "^4.0.1"
   },
   "devDependencies": {
+    "@types/bcrypt": "^5.0.2",
     "@types/bcryptjs": "^2.4.6",
     "@types/express": "^5.0.0",
     "@types/jsonwebtoken": "^9.0.7",
